--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
 
   <h2>💬 Contact</h2>
   <p>If you have questions, suggestions, or concerns, feel free to contact us via our GitHub repository:</p>
-  <p><a href="https://github.com/yourusername/DSASwitcher" target="_blank">https://github.com/yourusername/DSASwitcher</a></p>
-
+  <p><a href="https://github.com/ATHARV-YOGI/DSASwitcher" target="_blank">https://github.com/yourusername/DSASwitcher</a></p>
+  <p>Gmail : atharvyogi999@gmail.com</p>
+  
   <p>Stay sharp, stay consistent. ✨</p>
 </body>
 </html>
